--- a/.vitepress/theme/custom.css
+++ b/.vitepress/theme/custom.css
@@ -3,3 +3,7 @@
     --vp-home-hero-name-background: -webkit-linear-gradient(120deg, #bd34fe, #41d1ff);
     --vp-font-family-base: "Smug black italics"
 }
+
+body,html {
+   font-family: 'JetBrains Mono', sans-serif ;
+}
