style:字体改动以文本相关的内容跟新

--- a/.vitepress/theme/custom.css
+++ b/.vitepress/theme/custom.css
@@ -1,9 +1,7 @@
 :root {
     --vp-home-hero-name-color: transparent;
     --vp-home-hero-name-background: -webkit-linear-gradient(120deg, #bd34fe, #41d1ff);
-    --vp-font-family-base: "Smug black italics"
+    font-family: Inter, sans-serif;
+
 }
 
-body,html {
-   font-family: 'JetBrains Mono', sans-serif ;
-}
